nav and banner start

--- a/flowerbox/index.html
+++ b/flowerbox/index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+<!-- navigation bar -->
+<header>
+        <div class="navigation">
+            <div class="navigation-item">about</div>
+            <div class="navigation-item">collections</div>
+            <div class="navigation-item">delivery service</div>
+            <div class="navigation-item">location</div>
+            <div class="navigation-item">contact us</div>
+        </div>
+    </header>
+
+<!-- "hero" image -->
+    <div class="hero-image">
+    <p id="company">flowerbox.</p>
+    <p id="slogan">FOR ALL YOUR FLORAL NEEDS</p>
+    </div>
 </body>
+
 </html>
