--- a/flowerbox/index.html
+++ b/flowerbox/index.html
@@ -24,6 +24,23 @@
     <p id="company">flowerbox.</p>
     <p id="slogan">FOR ALL YOUR FLORAL NEEDS</p>
     </div>
+
+
+<!-- flower cards container-->
+    <div id="flower-cards">
+        <div class="flower-card"></div>
+        <div class="flower-card"></div>
+        <div class="flower-card"></div>
+        <div class="flower-card"></div>
+        <div class="flower-card"></div>
+        <div class="flower-card"></div>
+        <div class="flower-card"></div>
+        <div class="flower-card"></div>
+        <div class="flower-card"></div>
+    </div>
+
+    <footer></footer>
+
 </body>
 
 </html>
